LIBXS_DIST = libxs/libxs.vcxproj \
             libxs/libxs.vcxproj.filters \
             platform.hpp msvc10.sln

PERF_DIST = c_local_thr/c_local_thr.vcxproj \
            c_remote_thr/c_remote_thr.vcxproj \
            c_local_lat/c_local_lat.vcxproj \
            c_remote_lat/c_remote_lat.vcxproj \
            inproc_lat/inproc_lat.vcxproj \
            inproc_thr/inproc_thr.vcxproj

PROPERTIES_DIST = properties/Common.props \
                  properties/Debug.props \
                  properties/Dynamic.props \
                  properties/Executable.props \
                  properties/Precompiled.props \
                  properties/Release.props \
                  properties/Win32.props \
                  properties/Win32_Release.props \
                  properties/WithOpenPGM.props \
                  properties/x64.props \
                  properties/Crossroads.props

PRECOMPILED_DIST = ../../src/precompiled.hpp \
                   ../../src/precompiled.cpp

EXTRA_DIST = $(LIBXS_DIST) $(PERF_DIST) $(PROPERTIES_DIST) $(PRECOMPILED_DIST)
